# live-crew

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  thoughts.md
.claude/agents/: framework-ux-designer.md  pre-commit-docs-validator.md
.vibes/: README.md  live_crew_spec.md  scrum.md
.vibes/references/: README.md  crewai.md  freezegun.md  nats.md  pydantic-generics-testing.md  pydantic-settings.md  pydantic.md  pytest.md  pyyaml.md  typer.md  typing.md
examples/hello_world/: README.md  config.yaml  events.json  main.py
examples/simple_multi_crew/: README.md  demo_config.yaml  events.json  main.py  orchestration.yaml
src/live_crew/: __init__.py  cli.py  decorators.py  orchestration.py  timeslice.py
tests/: __init__.py  test_advanced_error_recovery.py  test_advanced_orchestration_edge_cases.py  test_advanced_security_attacks.py  test_cli.py  test_concurrency_edge_cases.py  test_config.py  test_config_errors.py  test_crewai_loader.py  test_crewai_models.py  test_crewai_wrapper.py  test_dependencies.py  test_dependency_resolver_comprehensive.py  test_error_recovery.py  test_event_validation.py  test_execution_tracker_comprehensive.py  test_generic_event_fix.py  test_integration_edge_cases.py  test_memory_scheduler.py  test_models.py  test_orchestrator_integration.py  test_partial_failure_handler_comprehensive.py  test_path_security.py  test_pattern_validation.py  test_performance_edge_cases.py  test_protocol_edge_cases.py  test_timeslice.py  utils.py
tests/examples/: hello_world_expected.yaml  simple_multi_crew_expected.yaml  (+1 more)
(+37 files in other folders)
